--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
-## Next Public Variables (Run on Build)
+## Firbase: Normal Variables
+API_KEY=
+AUTH_DOMAIN=
+PROJECT_ID=
+STORAGE_BUCKET=
+MESSAGING_SENDER_ID=
+APP_ID=
+MEASUREMENT_ID=
+
+## Firebase: Next Public Variables (Run on Build)
 NEXT_PUBLIC_API_KEY=
 NEXT_PUBLIC_AUTH_DOMAIN=
 NEXT_PUBLIC_PROJECT_ID=
@@ -7,7 +16,7 @@ NEXT_PUBLIC_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_APP_ID=
 NEXT_PUBLIC_MEASUREMENT_ID=
 
-## React App Variables (Prefix required for React to used)
+## Firebase: React App Variables (Prefix required for React to used)
 REACT_APP_API_KEY=
 REACT_APP_AUTH_DOMAIN=
 REACT_APP_PROJECT_ID=
