feat: add babel, eas, metro config

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "polychat",
     "slug": "polychat",
-    "version": "1.0.0",
+    "version": "0.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -18,7 +18,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.jatekoh.polychat"
     },
     "android": {
       "adaptiveIcon": {
@@ -28,6 +29,20 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "1b73cb91-db0c-4abf-87dc-dd51dfcdedbf"
+      },
+      "extra": {
+        "API_KEY": "process.env.API_KEY",
+        "AUTH_DOMAIN": "process.env.AUTH_DOMAIN",
+        "PROJECT_ID": "process.env.PROJECT_ID",
+        "STORAGE_BUCKET": "process.env.STORAGE_BUCKET",
+        "MESSAGING_SENDER_ID": "process.env.MESSAGING_SENDER_ID",
+        "APP_ID": "process.env.APP_ID",
+        "MEASUREMENT_ID": "process.env.MEASUREMENT_ID"
+      }
     }
   }
 }
