fix: env variable and firebase connection

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "type": "git",
     "url": "https://github.com/jate-koh/polychat"
   },
+  "browser": {
+    "fs": false
+  },
   "resolutions": {
     "@expo/config-plugins": "~5.0.0",
     "@expo/prebuild-config": "~5.0.0",
@@ -21,13 +24,15 @@
     "build:production": "eas build -p ios --profile development"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "^0.14.6",
     "firebase": "^9.11.0",
     "path": "^0.12.7",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-dotenv": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -35,9 +40,7 @@
     "@expo/config-plugins": "5.0.0",
     "@expo/metro-config": "^0.4.0",
     "@expo/prebuild-config": "5.0.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "eas-cli": "2.3.0",
-    "env-cmd": "^10.1.0",
     "expo-modules-autolinking": "0.10.1",
     "prettier": "^2.7.1"
   },
