--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "expo": "~46.0.13",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "^0.14.6",
+    "expo": "~44",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "firebase": "^9.11.0",
+    "native-base": "^3.4.18",
     "path": "^0.12.7",
-    "react": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-dotenv": "^3.3.1"
+    "react": "^17.0.0-rc.1",
+    "react-dom": "^17.0.0",
+    "react-native": "0.64.3",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-svg": "12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -40,9 +44,12 @@
     "@expo/config-plugins": "5.0.0",
     "@expo/metro-config": "^0.4.0",
     "@expo/prebuild-config": "5.0.0",
+    "@types/react": "^18.0.21",
+    "@types/react-native": "^0.70.4",
     "eas-cli": "2.3.0",
     "expo-modules-autolinking": "0.10.1",
     "prettier": "^2.7.1"
   },
+  "peerDependencies": {},
   "private": true
 }
